# ChangeLog for games-strategy/lordsawar
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 May 2011; Piotr Szymaniak <szarpaj@grubelek.pl> lordsawar-0.1.9.ebuild,
  metadata.xml:
  Updated deps, updated metadata info.

*lordsawar-0.1.9 (10 Aug 2010)

  10 Aug 2010; Piotr Szymaniak <lazy_bum@o2.pl> -lordsawar-0.1.8.ebuild,
  +lordsawar-0.1.9.ebuild:
  Bump.

  08 Jun 2010; Piotr Szymaniak <lazy_bum@o2.pl> lordsawar-0.1.8.ebuild:
  Added missing depend.

*lordsawar-0.1.8 (08 Jun 2010)

  08 Jun 2010; Piotr Szymaniak <lazy_bum@o2.pl> -lordsawar-0.1.5.ebuild,
  -lordsawar-0.1.5-r1.ebuild, -lordsawar-0.1.6_pre2.ebuild,
  +lordsawar-0.1.8.ebuild:
  Version bump.

  05 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> lordsawar-0.1.5.ebuild,
  lordsawar-0.1.5-r1.ebuild, lordsawar-0.1.6_pre2.ebuild:
  Fixed missing flag in IUSE.

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  lordsawar-0.1.6_pre2.ebuild:
  Fixed deps.

  26 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> lordsawar-0.1.5-r1.ebuild,
  lordsawar-0.1.6_pre2.ebuild:
  Fixed deps and some whitespace.

  01 Jun 2009; Piotr Szymaniak <lazy_bum@o2.pl> -lordsawar-0.0.8.ebuild,
  -lordsawar-0.1.4.ebuild, +lordsawar-0.1.5-r1.ebuild,
  +lordsawar-0.1.6_pre2.ebuild:
  Bumped changes by A.C.Heron (bug #206790).

  06 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +lordsawar-0.1.5.ebuild:
  Bumped, added boost dep. It seems that it's needed, but I don't see the
  binary link to it. Weird.

  11 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> lordsawar-0.1.4.ebuild:
  Dropped sound flag. It clashed with --as-needed for some reason.
  Tweakedsdl-mixer dep.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +lordsawar-0.1.4.ebuild:
  Bumped.

  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> lordsawar-0.0.8.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.
