@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST lordsawar-0.1.9.tar.gz 24521408 RMD160 54eed99c5dbdfc2eae81d58a90a3ab0f2e481860 SHA1 2dc629eb6030da20bf4d1562798e689b8c802462 SHA256 3c5f5708bbfbc8efd6e5ea5929bd657207502e5c03984db9c707fe29803e8779
-EBUILD lordsawar-0.1.9.ebuild 1326 RMD160 507905aeca91c57dbe7d5b8a7a7ca84e33c86716 SHA1 2929d71b5fac5320c080afb890a7659f4c59fcbc SHA256 117b16ec6a3095cb5054744684199b37938a918a82e108931d8de2e18fa3dd9b
-MISC ChangeLog 1888 RMD160 396679a406fe8318a26a0f04e3c5e0cafbb7a85b SHA1 35d8f41d0f3a6c0f26e5142933f2480d075b9779 SHA256 dfcbfa3329ded7657d4c944f72ca1f9953bf46e62cacd550e7ed9c6536f91c03
+EBUILD lordsawar-0.1.9.ebuild 1348 RMD160 6ad6b88527f9355e8fefa58e8aa8ce2c90032f9c SHA1 e6a15822d7f78321c9482f0adbb3255bc1904e6c SHA256 f49325f301c60040b4467719d3f152cd613d41e00d84d3452099919f128b9f1f
+MISC ChangeLog 2016 RMD160 e083242aeb5ed5a4ea24cf5d03468441bb1c64a6 SHA1 df496cbd265df3a0a9235495091995105a5508d5 SHA256 695f23db4630fc806fdedb43fcea55c306b57e3dd2799d86d231f11e5553fa09
 MISC metadata.xml 417 RMD160 6f158bd0b69213d3515ff243236cd03ec77e155a SHA1 8a07f8857ea42fd5459a809b64538caf83f65747 SHA256 187e8c3755fb1c4be399fc37c5261c24d120b384b2b3492bc0e8bbef6dd627fc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3DxacACgkQ9xNbxaeWTTyiuwCbBWwSMhw8mDA3Xpq99mP8nZZD
-eDYAniACdOJ42iQaQ7cwiyymNNnFcg7w
-=TidV
+iEYEARECAAYFAk3DxxEACgkQ9xNbxaeWTTxwhQCaA76e4gYjq3xcb/KNUR/8gL/y
+zfEAn1XxPn+9GD/iRpVEsezkCUgmw9Mw
+=b+Sa
 -----END PGP SIGNATURE-----
